--- a/style.css
+++ b/style.css
@@ -376,8 +376,14 @@ nav ul li button{
     height: 200px;
     margin: 0 auto;
     margin-top: 22%; 
-    border-radius:10px;
 }
+.id2-img{
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    margin-top: 5%; 
+    border-radius: 10px;
+ }
 .page2-button{
     padding: 20px;
     border: none;
