--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ nav{
     width: 150px;
     height: 50px;
     color: var(--text-color);
+    font-weight:bold;
 }
 .scroll-span{
     margin-left: 2%;
